# neonumy-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
neonumy_album/: manage.py  pyproject.toml
neonumy_album/images/: models.py  schema.py  tests.py  urls.py  views.py
neonumy_album/images/migrations/: 0001_initial.py
neonumy_album/images/static/images/: styles.css
neonumy_album/images/templates/images/: base.html  image_detail.html  image_list.html  update_image.html  upload_image.html
neonumy_album/neonumy_album/: asgi.py  settings.py  urls.py  wsgi.py
