[tool.poetry]
name = "neonumy-test"
version = "0.1.0"
description = ""
authors = ["arona14 <sowarona14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
graphene-django = "^3.2.2"
django-filter = "^25.1"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
