[tool.poetry]
name = "neonumy-album"
version = "0.1.0"
description = "A modern photo album application built with Django"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "neonumy_album"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2-binary = "^2.9.9"
graphene-django = "^3.2.3"
pillow = "^10.2.0"
django-cors-headers = "^4.3.1"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
dj-database-url = "^2.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 